--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,7 @@ bin
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+.idea
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
