--- a/.envrc
+++ b/.envrc
@@ -2,3 +2,5 @@ export SERVER_NAME=CodeHarvestApp
 export HOSTNAME=localhost
 export PORT=1122
 export URI=mongodb://localhost:27017
+export DB=code-harvest
+export COLLECTION=sessions
