chore: Name change

--- a/server/testdata/sturdyc/git/config
+++ b/server/testdata/sturdyc/git/config
@@ -6,7 +6,7 @@
 	ignorecase = true
 	precomposeunicode = true
 [remote "origin"]
-	url = git@github.com:creativecreature/sturdyc.git
+	url = git@github.com:viccon/sturdyc.git
 	fetch = +refs/heads/*:refs/remotes/origin/*
 [branch "main"]
 	remote = origin
